float fix - stuck

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
 
 * {
     margin: 0;
-    padding: 0;
 }
 html {
     font-family: 'Open Sans', sans-serif;
@@ -10,13 +9,10 @@ html {
 body {
     position: relative;
 }
-.left {
-    float: left;
-    width: 50%;
-}
-.right {
-    float: right;
-    width: 50%;
+.content {
+    margin: 20px;
+    width: 100%;
+    height: 100%;
 }
 .clear {
     clear: both;
@@ -33,18 +29,31 @@ h2 {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+    float: left;
 }
 nav {
+    float: right;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
 }
 /***********************************/
 
+/***************MAIN****************/
+
+.main {
+    float: left;
+    width: 50%;
+}
+
+/***********************************/
+
 /************CIRCLES****************/
 
 .circ-container {
     position: relative;
+    float: right;
+    width: 50%;
 }
 .circle {
     position: absolute;
